--- a/stock_quotes/templates/add_stock.html
+++ b/stock_quotes/templates/add_stock.html
@@ -15,38 +15,40 @@ my-2 my-lg-0" method="POST" autocomplete="off">
 <br/>
 <br/>
 
-<table class="table table-striped table-bordered table-hover">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Ticker Symbol</th>
-      <th scope="col">Lastest Price</th>
-      <th scope="col">Previous Close</th>
-      <th scope="col">Market Cap</th>
-      <th scope="col">YTD Change</th>
-      <th scope="col">52 Week High</th>
-      <th scope="col">52 Week Low</th>
-    </tr>
-  </thead>
-  <tbody>
-{% if ticker %}
+<div class="table-responsive-md">
+    <table class="table table-striped table-bordered table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Ticker Symbol</th>
+          <th scope="col">Lastest Price</th>
+          <th scope="col">Previous Close</th>
+          <th scope="col">Market Cap</th>
+          <th scope="col">YTD Change</th>
+          <th scope="col">52 Week High</th>
+          <th scope="col">52 Week Low</th>
+        </tr>
+      </thead>
+      <tbody>
+    {% if ticker %}
 
 
 
-          {% for list_item in output %}
-              <tr>
-                <th scope="row">{{ list_item.companyName }}</th>
-                <td>${{ list_item.latestPrice }}</td>
-                <td>${{ list_item.previousClose }}</td>
-                <td>${{ list_item.marketCap }}</td>
-                <td>{{ list_item.ytdChange }}%</td>
-                <td>${{ list_item.week52High }}</td>
-                <td>${{ list_item.week52Low }}</td>
-              </tr>
-          {% endfor %}
+              {% for list_item in output %}
+                  <tr>
+                    <th scope="row">{{ list_item.companyName }}</th>
+                    <td>${{ list_item.latestPrice }}</td>
+                    <td>${{ list_item.previousClose }}</td>
+                    <td>${{ list_item.marketCap }}</td>
+                    <td>{{ list_item.ytdChange }}%</td>
+                    <td>${{ list_item.week52High }}</td>
+                    <td>${{ list_item.week52Low }}</td>
+                  </tr>
+              {% endfor %}
 
 
-  </tbody>
-</table>
+      </tbody>
+    </table>
+</div>
 {% endif %}
 
 
